<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/coffee"
        android:title="@string/title_order" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/cart"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_ostate"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/title_orderstate" />

    <item
        android:id="@+id/navigation_customcontrol"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/title_customcontrol" />

</menu>