<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_order"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="50dp"
        app:cardElevation="10dp"
        app:contentPadding="30dp"
        android:layout_marginBottom="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/menu_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/menu_kor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/menu_kor_name"/>

            <TextView
                android:id="@+id/menu_eng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_eng_name"/>

            <TextView
                android:id="@+id/menu_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/menu_detail"/>

            <RadioGroup
                android:id="@+id/temp_group"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/temp_radio_hot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temp_hot"/>

                <RadioButton
                    android:id="@+id/temp_radio_ice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temp_ice"/>

            </RadioGroup>

            <RadioGroup
                android:id="@+id/size_group"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/size_tall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size_tall"/>

                <RadioButton
                    android:id="@+id/size_grande"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size_grande"/>

                <RadioButton
                    android:id="@+id/size_venti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size_venti"/>

            </RadioGroup>

            <TextView
                android:id="@+id/price"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_price"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <Button
                android:id="@+id/btn_add_cart"
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_to_cart" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>