<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.cafe_user.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/home_to_cart"
            app:destination="@+id/navigation_cart"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_order"
        android:name="com.example.cafe_user.ui.order.OrderFragment"
        android:label="@string/title_order"
        tools:layout="@layout/fragment_order">
        <action
            android:id="@+id/order_to_cart"
            app:destination="@+id/navigation_cart"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.cafe_user.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart">
        <action
            android:id="@+id/cart_to_order"
            app:destination="@+id/navigation_order"/>
        <action
            android:id="@+id/cart_to_ostate"
            app:destination="@+id/navigation_ostate"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_ostate"
        android:name="com.example.cafe_user.ui.order.OState"
        android:label="@string/title_orderstate"
        tools:layout="@layout/activity_o_state" />

    <fragment
        android:id="@+id/navigation_customcontrol"
        android:name="com.example.cafe_user.ui.custom.CustomControl"
        android:label="@string/title_customcontrol"
        tools:layout="@layout/custom_control" />
</navigation>