<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="horizontal"
    >

    <ImageView
        android:id="@+id/cart_image"
        android:layout_width="200dp"
        android:layout_height="140dp"
        android:layout_margin="5dp"
        android:layout_marginRight="30dp"
        android:layout_weight="1"
        android:contentDescription="@string/cart_img"
        app:srcCompat="@drawable/coffee" />

    <LinearLayout
        android:layout_width="626dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:gravity="right"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/menu_kor_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/cart_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="주문 ID"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/cart_temp_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/cart_radio_ice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/temp_ice" />

            <RadioButton
                android:id="@+id/cart_radio_hot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/temp_hot" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="fill_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="사이즈 : "
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_weight="3"/>

            <TextView
                android:id="@+id/item_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart_item_count"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <ImageButton
                android:id="@+id/btn_count_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/button_up_count"
                app:srcCompat="@android:drawable/arrow_up_float"
                tools:srcCompat="@android:drawable/arrow_up_float" />
            <ImageButton
                android:id="@+id/btn_count_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/button_down_count"
                app:srcCompat="@android:drawable/arrow_down_float"
                tools:srcCompat="@android:drawable/arrow_down_float" />

        </LinearLayout>

        <TextView
            android:id="@+id/item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cart_item_price"
            android:gravity="right"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/del_check"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:gravity="center"/>
</LinearLayout>